--- a/package.json
+++ b/package.json
@@ -3,24 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.3.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.115",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/redux-mock-store": "^1.0.6",
     "cra-template-typescript": "1.2.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
     "sass": "^1.80.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -50,7 +44,34 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^16.0.1",
     "@types/axios": "^0.14.4",
-    "@types/react-transition-group": "^4.4.11"
+    "@types/jest": "^29.5.14",
+    "@types/react-transition-group": "^4.4.11",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-mock-store": "^1.5.5",
+    "redux-thunk": "^3.1.0",
+    "ts-jest": "^29.2.5"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(axios)/)"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "identity-obj-proxy"
+    }
   }
 }
